Downgraded to SpringBoot 3.2.12 due to compatibility issues with Java 17
Implemented /v1/login
Implemented GET /v1/users/{userId} dealing with authorisation and Not Found User and Different User to the autorised one
