# src/main/java/com/eaglebank/advice/ValidationExceptionHandler.java
@@ -1,7 +1,11 @@
 package com.eaglebank.advice;
 
+import com.eaglebank.exception.ForbiddenException;
+import com.eaglebank.exception.UserNotFoundException;
+import com.eaglebank.model.ErrorResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -20,4 +24,29 @@ public class ValidationExceptionHandler {
     });
     return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errors);
   }
+
+  @ExceptionHandler(UserNotFoundException.class)
+  public ResponseEntity<ErrorResponse> handleUserNotFound(UserNotFoundException ex) {
+    ErrorResponse error = new ErrorResponse("User not found");
+    return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error);
+  }
+
+  @ExceptionHandler(HttpMessageNotReadableException.class)
+  public ResponseEntity<ErrorResponse> handleUserNotFound(HttpMessageNotReadableException ex) {
+    ErrorResponse error = new ErrorResponse("Invalid Json Body supplied");
+    return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
+  }
+
+  @ExceptionHandler(ForbiddenException.class)
+  public ResponseEntity<ErrorResponse> handleForbidden(Exception ex) {
+    ErrorResponse error = new ErrorResponse("Forbidden");
+    return ResponseEntity.status(HttpStatus.FORBIDDEN).body(error);
+  }
+
+  @ExceptionHandler(Exception.class)
+  public ResponseEntity<ErrorResponse> handleGeneric(Exception ex) {
+    ErrorResponse error = new ErrorResponse("Internal server error");
+    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
+  }
+
 }
