# src/main/java/com/eaglebank/controllers/UserApiController.java
@@ -1,19 +1,21 @@
 package com.eaglebank.controllers;
 
 import com.eaglebank.api.UserApi;
+import com.eaglebank.exception.ForbiddenException;
 import com.eaglebank.model.CreateUserRequest;
-import com.eaglebank.model.ErrorResponse;
 import com.eaglebank.model.UpdateUserRequest;
+import com.eaglebank.model.User;
 import com.eaglebank.model.UserResponse;
+import com.eaglebank.service.UserDetailsService;
 import com.eaglebank.service.UserService;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.RestController;
 
 import static org.springframework.http.HttpStatus.CREATED;
-import static org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR;
 
 @RestController
 public class UserApiController implements UserApi {
@@ -21,14 +23,13 @@ public class UserApiController implements UserApi {
   @Autowired
   private UserService userService;
 
+  @Autowired
+  private UserDetailsService userDetailsService;
+
   @Override
   public ResponseEntity<UserResponse> createUser(@Valid CreateUserRequest createUserRequest) {
-    try {
-      UserResponse userResponse = userService.createUser(createUserRequest);
-      return ResponseEntity.status(CREATED).body(userResponse);
-    } catch (Exception exception) {
-      return ResponseEntity.status(INTERNAL_SERVER_ERROR).body(new UserResponse());
-    }
+    UserResponse userResponse = userService.createUser(createUserRequest);
+    return ResponseEntity.status(CREATED).body(userResponse);
   }
 
   @Override
@@ -38,7 +39,17 @@ public class UserApiController implements UserApi {
 
   @Override
   public ResponseEntity<UserResponse> fetchUserByID(String userId) {
-    return UserApi.super.fetchUserByID(userId);
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    User loggedInUser = (User) authentication.getPrincipal();
+
+    // I do not agree with this scenario, but it is checking that
+    // a user exists before checking that the user is allowed access to the user
+    UserResponse userResponse = userService.fetchUserById(userId);
+
+    if (!loggedInUser.getId().equals(userId)) {
+      throw new ForbiddenException("Forbidden");
+    }
+    return ResponseEntity.ok(userResponse);
   }
 
   @Override
