# src/main/resources/openapi.yaml
@@ -5,6 +5,8 @@ info:
   description: |-
     We want you to create a REST API for Eagle Bank which conforms to this OpenAPI specification which allows a user to create, fetch, update and delete a bank account and deposit or withdraw money from the account. These will be stored as transactions against a bank account which be retrieved but not modified or deleted.
 tags:
+  - name: auth
+    description: Authentication
   - name: account
     description: Manage a bank account
   - name: transaction
@@ -12,6 +14,38 @@ tags:
   - name: user
     description: Manage a user
 paths:
+  /v1/login:
+    post:
+      tags:
+        - auth
+      description: Login to the Bank
+      operationId: login
+      requestBody:
+        description: Credentials
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginRequest'
+        required: true
+      responses:
+        '200':
+          description: JTW Bearer Token for all requests
+          content:
+            application/jwt:
+              schema:
+                type: string
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/ErrorResponse'
+        '500':
+          description: An unexpected error occurred
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
   /v1/accounts:
     post:
       tags:
@@ -927,6 +961,17 @@ components:
                 type: string
               type:
                 type: string
+    LoginRequest:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          type: string
   securitySchemes:
     bearerAuth:
       type: http
